--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <p><a href="./public/about.html">Learn more about me here</a></p>
 
         <p><a href="./public/contact.html">Get in touch with me!</a></p>
+
+        <p><a href="./public/resume.html">See my Resume</a></p>
     
     </body>
 
